src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>KS_Aprobacion__c</fullName>
        <formula>IF (  KS_Necesita_aprobacion__c = TRUE, IMAGE(&quot;/resource/1468564183000/dialog_warning_png&quot;, &quot;y&quot;,16,16),IMAGE(&quot;/resource/1468564203000/accept_png&quot;, &quot;n&quot;,16,16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aprobación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Bruto_Cantidad__c</fullName>
        <formula>UnitPrice * KS_Cantidad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bruto Cantidad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Canal__c</fullName>
        <formula>Opportunity.KS_Canal__c</formula>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Cantidad_Ficha__c</fullName>
        <label>Cantidad por Ficha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Cantidad_Total__c</fullName>
        <formula>Quantity *  IF(KS_Cantidad_Ficha__c&gt;0, KS_Cantidad_Ficha__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cantidad Total por Ficha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Comentarios__c</fullName>
        <label>Comentarios</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KS_Competencia__c</fullName>
        <label>Competencia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Competencia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Competidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competencia</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.KS_recordType_Name__c</field>
                <operation>equals</operation>
                <value>Competidor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Producto de oportunidad</relationshipLabel>
        <relationshipName>Producto_de_oportunidad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Desc_Manual__c</fullName>
        <label>Desc. Manual</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descripcion__c</fullName>
        <formula>PricebookEntry.Product2.KS_descripcion_corta__c</formula>
        <label>Descripción</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Descuento_neto__c</fullName>
        <inlineHelpText>ZDA9</inlineHelpText>
        <label>Descuento neto</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dest_ClieFinal__c</fullName>
        <formula>TEXT(KS_Destinatario__c) == &apos;Cliente final&apos;</formula>
        <label>Destino Cliente Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Dest_Distribuidor__c</fullName>
        <formula>TEXT(KS_Destinatario__c) == &apos;Distribuidor&apos;</formula>
        <label>Destino Distribuidor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Dest_Instalador__c</fullName>
        <formula>TEXT(KS_Destinatario__c) == &apos;Instalador&apos;</formula>
        <label>Destino Instalador</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Destinatario__c</fullName>
        <label>Destinatario</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Material_sin_cargo__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Destinatario</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Dto_Campaign__c</fullName>
        <label>Dto. Campaña</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Instalador__c</fullName>
        <label>Dto. Instalador</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_SinCargo__c</fullName>
        <formula>IF(KS_Dest_Distribuidor__c , KS_Dto_adicional_2__c , 

IF(KS_Dest_Instalador__c , KS_Dto_Instalador__c , 

IF(KS_Dest_ClieFinal__c , KS_Dto_cliente_final__c , 
0

)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento Sin Cargo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Total__c</fullName>
        <formula>(UnitPrice -  KS_Neto_Unitario__c )/ UnitPrice</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dto. Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Variedad__c</fullName>
        <label>Dto. Variedad</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_1__c</fullName>
        <label>Dto. Adicional</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_adicional_2__c</fullName>
        <label>Extra</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_1__c</fullName>
        <label>Base</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_base_2__c</fullName>
        <label>Ficha</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_cliente_final__c</fullName>
        <label>Dto. cliente final</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Dto_logistico__c</fullName>
        <formula>IF( KS_Volumen_OK__c &amp;&amp;  KS_dto_volumen__c != 0, KS_dto_volumen__c , 
IF( KS_Variedad_OK__c &amp;&amp;  KS_Dto_Variedad__c != 0, KS_Dto_Variedad__c , 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dto. Logístico</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Familia_Cod__c</fullName>
        <formula>TEXT(KS_Familia__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cod. Familia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Familia__c</fullName>
        <label>Familia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Familia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Ficha_Nombre__c</fullName>
        <label>Nombre de la Ficha</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Ficha__c</fullName>
        <label>Ficha</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_ID_Producto_Oferta__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Producto Oferta</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Informe_FechaCreacion__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KS_Informe_FechaCreacion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KS_Material__c</fullName>
        <formula>PricebookEntry.Product2.KS_Id_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Material_sin_cargo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material sin cargo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Migracion_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migracion Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Necesita_aprobacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necesita aprobación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Neto_Base__c</fullName>
        <formula>IF(KS_ZPN0__c, 
UnitPrice,
( UnitPrice*(1- (KS_Dto_base_1__c))*(1- (KS_Dto_base_2__c))*(1-( KS_Dto_Campaign__c )) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto Base</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_Unitario_Cliente_Final__c</fullName>
        <formula>UnitPrice *(1-  (KS_Dto_cliente_final__c)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto Unitario Cliente Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_Unitario__c</fullName>
        <formula>KS_Neto_VAVR__c*(1-KS_Dto_adicional_1__c)*(1-KS_Dto_adicional_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto Unitario</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_VAVR__c</fullName>
        <formula>IF(KS_ZPN0__c, 
UnitPrice, 
( KS_Neto_Base__c*(1- (KS_Dto_logistico__c)) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto Variedad/Volumen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_por_ficha_Cliente_Final__c</fullName>
        <label>Neto por ficha Cliente Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_por_ficha_Instalador__c</fullName>
        <label>Neto por ficha Instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_por_ficha__c</fullName>
        <label>Neto por ficha</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_por_fila_Cliente_Final__c</fullName>
        <formula>Quantity *  KS_Neto_Unitario_Cliente_Final__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto por fila Cliente Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_por_fila_Instalador__c</fullName>
        <formula>Quantity *  Ks_Neto_Unitario_Instalador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto por fila Instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Neto_por_fila__c</fullName>
        <formula>Quantity *  KS_Neto_Unitario__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto por fila</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Nombre__c</fullName>
        <formula>PricebookEntry.Product2.KS_Nombre_producto__c</formula>
        <label>Nombre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <formula>CASESAFEID(Opportunity.KS_Obra__c)</formula>
        <label>Obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Orden__c</fullName>
        <label>Orden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <formula>Opportunity.KS_Organizacion_de_ventas__c</formula>
        <label>Organización de ventas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Producto__c</fullName>
        <formula>CASESAFEID(PricebookEntry.Product2.Id)</formula>
        <label>ID Producto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Referencia__c</fullName>
        <label>Ref.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <formula>Opportunity.KS_Sector__c</formula>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Serie_Cod__c</fullName>
        <formula>TEXT(KS_Serie__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cod. Serie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Serie__c</fullName>
        <label>Serie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>022</fullName>
                </value>
                <value>
                    <fullName>023</fullName>
                </value>
                <value>
                    <fullName>024</fullName>
                </value>
                <value>
                    <fullName>025</fullName>
                </value>
                <value>
                    <fullName>026</fullName>
                </value>
                <value>
                    <fullName>027</fullName>
                </value>
                <value>
                    <fullName>028</fullName>
                </value>
                <value>
                    <fullName>029</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subserie_Cod__c</fullName>
        <formula>TEXT(KS_Subserie__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cod. Subserie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Subserie__c</fullName>
        <label>Subserie</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Subserie</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_SuperFamilia_Cod__c</fullName>
        <formula>TEXT(KS_SuperFamilia__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cod. SuperFamilia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_SuperFamilia__c</fullName>
        <label>SuperFamilia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Superfamilia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Variedad_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aplica Variedad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Volumen_OK__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aplica Volumen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_ZPN0__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ZPN0</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_dto_volumen__c</fullName>
        <label>Dto. Volumen</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_precio_neto__c</fullName>
        <inlineHelpText>ZPN0</inlineHelpText>
        <label>Precio Neto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ks_Neto_Unitario_Instalador__c</fullName>
        <formula>UnitPrice *(1-  (KS_Dto_Instalador__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neto Unitario Instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <validationRules>
        <fullName>Cantidad_informada</fullName>
        <active>true</active>
        <errorConditionFormula>KS_Cantidad__c &lt; 1</errorConditionFormula>
        <errorMessage>La cantidad debe ser mínimo 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_Instalador</fullName>
        <active>false</active>
        <description>Controla que no se introduzca un dto de instalador si no se indica el instalador en la Oferta</description>
        <errorConditionFormula>KS_Dto_Instalador__c &gt;0 &amp;&amp;  Opportunity.KS_Instalador__c &lt;&gt;&apos;&apos;</errorConditionFormula>
        <errorMessage>No puede indicarse un dto. de instalador si no se ha indicado dicho instalador en la Oferta.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_MSC</fullName>
        <active>true</active>
        <description>Controla que no se altere el % de descuento de un MSC seleccionado</description>
        <errorConditionFormula>AND( 
KS_Material_sin_cargo__c = TRUE 
, OR ( TEXT(KS_Destinatario__c) = &apos;Distribuidor&apos;
     , TEXT(KS_Destinatario__c) = &apos;Instalador&apos;
     , TEXT(KS_Destinatario__c) = &apos;Cliente final&apos;
  )
, OR ( ISNULL(KS_Dto_adicional_2__c)
     , KS_Dto_adicional_2__c &lt;&gt; 1.00
  )
)</errorConditionFormula>
        <errorMessage>El descuento extra debe de ser 100% en el caso de Material sin cargo con Destinatario Distribuidor, Instalador o Cliente final</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_MSC_ClieFinal</fullName>
        <active>true</active>
        <description>Controla que no se altere el % de descuento de un MSC seleccionado</description>
        <errorConditionFormula>AND( 
KS_Material_sin_cargo__c = TRUE 
, TEXT(KS_Destinatario__c) = &apos;Cliente final&apos;
, OR ( ISNULL(KS_Dto_cliente_final__c)
     , KS_Dto_cliente_final__c &lt;&gt; 1.00
  )
)</errorConditionFormula>
        <errorMessage>El descuento cliente final deben de ser 100% en el caso de Material sin cargo con Destinatario Cliente final</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_MSC_Instalador</fullName>
        <active>true</active>
        <description>Controla que no se altere el % de descuento de un MSC seleccionado</description>
        <errorConditionFormula>AND( 
KS_Material_sin_cargo__c = TRUE 
, OR ( TEXT(KS_Destinatario__c) = &apos;Instalador&apos;
     , TEXT(KS_Destinatario__c) = &apos;Cliente final&apos;
  )
, OR ( ISNULL(KS_Dto_Instalador__c)
     , KS_Dto_Instalador__c &lt;&gt; 1.00
  )
)</errorConditionFormula>
        <errorMessage>El descuento instalador deben de ser 100% en el caso de Material sin cargo con Destinatario Instalador o Cliente final</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_de_destinatario</fullName>
        <active>true</active>
        <description>Controla que no se indique un destinatario que no esté indicado en la oferta</description>
        <errorConditionFormula>(TEXT(KS_Destinatario__c) =&apos;Distribuidor&apos; &amp;&amp; Opportunity.KS_Distribuidor__c =&apos;&apos; )
|| (TEXT(KS_Destinatario__c)=&apos;Cliente final&apos;&amp;&amp;  Opportunity.KS_Cliente_final__c =&apos;&apos;) 
|| (TEXT(KS_Destinatario__c)=&apos;Instalador&apos; &amp;&amp; Opportunity.KS_Instalador__c =&apos;&apos;)</errorConditionFormula>
        <errorMessage>El destinatario seleccionado no esta definido como parte en esta oferta</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_de_material_sin_cargo</fullName>
        <active>true</active>
        <description>Controla que en el caso de que haya material sin cargo se indique cual es su destinatario</description>
        <errorConditionFormula>AND(KS_Material_sin_cargo__c, ISBLANK(TEXT(KS_Destinatario__c) ) )</errorConditionFormula>
        <errorMessage>Debe de indicarse un destinatario del material sin cargo</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_descuentos_de_destinatario</fullName>
        <active>false</active>
        <description>Controla que no se informen descuentos para destinatarios no informados</description>
        <errorConditionFormula>(Opportunity.KS_Cliente_final__c =&quot;&quot; &amp;&amp;  KS_Dto_cliente_final__c &lt;&gt;0 )||( Opportunity.KS_Instalador__c =&apos;&apos; &amp;&amp;  KS_Dto_Instalador__c &lt;&gt;0)</errorConditionFormula>
        <errorMessage>No deben de informarse de descuentos de Instalador o Cliente final si estos no están indicados como integrantes de esta Oferta.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Control_dto_Cliente_Final</fullName>
        <active>false</active>
        <description>Controla que no se indique dto de cliente final si no esta informado el cliente final en la oferta</description>
        <errorConditionFormula>KS_Dto_cliente_final__c &lt;&gt;0 &amp;&amp; Opportunity.KS_Cliente_final__c &lt;&gt;&apos;&apos;</errorConditionFormula>
        <errorMessage>No puede indicarse un descuento de Cliente Final si no ha indicado dicho cliente en la Oferta.</errorMessage>
    </validationRules>
</CustomObject>